--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+title: Centragro Sektor Utama
+description: Laboratorium Riset dan Pengembangan Agroteknologi
+show_downloads: true
+google_analytics:
 theme: jekyll-theme-leap-day
