--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,6 @@ description: Laboratorium Riset dan Pengembangan Agroteknologi
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-leap-day
+url: "https://centragro.github.io"
+plugins:
+  - jekyll-sitemap
