--- a/_config.yml
+++ b/_config.yml
@@ -173,7 +173,7 @@ analytics:
 
   ## Google Analytics
   google:
-    tracking_id : # Google Analytics id for the site
+    tracking_id : G-3EELHW774L # Google Analytics id for the site
     anonymize_ip: false # Anonymize IP tracking for Analytics
 
 
