--- a/_config.yml
+++ b/_config.yml
@@ -153,7 +153,7 @@ pageview:
   leancloud:
     app_id    : 0UHnUqgCmcfFthw96GvN4Jix-MdYXbMMI # LeanCloud App id
     app_key   : TXcM1VBScMCAW7qNyMzMwwlt # LeanCloud App key
-    app_class : counter # LeanCloud App class
+    app_class : xcounter # LeanCloud App class
 
 
 ## => Search
