--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ timezone: # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for
 ##############################
 author:
   type      : # "person" (default), "organization"
-  name      : Centragro
+  name      : Centragro Lab
   url       : https://centragro.github.io
   avatar    : # path or url of avatar image (square)
   bio       : Centragro adalah Laboratorium Riset dan Pengembangan Agroteknologi.
