--- a/_config.yml
+++ b/_config.yml
@@ -214,6 +214,18 @@ defaults:
       show_edit_on_github: false
       show_subscribe: true
       pageview: true
+      ### THIS IS CUSTOM SETTINGS FOR POSTING PAGES ###
+      header:
+        theme: dark
+        background: 'linear-gradient(135deg, rgb(34, 139, 87), rgb(139, 34, 139))'
+      article_header:
+        show_cover: false
+        type: overlay
+        theme: dark
+        background_color: '#203028'
+        background_image:
+          gradient: 'linear-gradient(135deg, rgba(34, 139, 87 , .4), rgba(139, 34, 139, .4))'
+          src: /assets/bg-0.jpg
 
 
 ## => Plugins
