--- a/_data/variables.yml
+++ b/_data/variables.yml
@@ -34,7 +34,7 @@ default:
     show_subscribe: false
     full_width: false
     sharing: false
-    comment: true
+    comments: true
     license: false
     pageview: false
     search: default
