--- a/_data/variables.yml
+++ b/_data/variables.yml
@@ -25,7 +25,7 @@ default:
       show_cover: true
       show_excerpt: false
       show_readmore: false
-      show_info: false
+      show_info: true
     show_title: true
     show_edit_on_github: false
     show_date: true
@@ -33,7 +33,7 @@ default:
     show_author_profile: false
     show_subscribe: false
     full_width: false
-    sharing: false
+    sharing: true
     comment: true
     license: false
     pageview: false
