--- a/_config.yml
+++ b/_config.yml
@@ -215,6 +215,7 @@ defaults:
       show_subscribe: true
       pageview: true
       ### THIS IS CUSTOM SETTINGS FOR POSTING PAGES ###
+      comment: true
       header:
         theme: dark
         background: 'linear-gradient(135deg, rgb(34, 139, 87), rgb(139, 34, 139))'
