--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ author:
   url       : https://centragro.github.io
   avatar    : # path or url of avatar image (square)
   bio       : Centragro adalah Laboratorium Riset dan Pengembangan Agroteknologi.
-  email     :
+  email     : info@centragro.org
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
   twitter   : # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
   weibo     : # "user_id"   the last part of your profile url, e.g. https://www.weibo.com/user_id/profile?...
